# debXray

./: CMakeLists.txt  build.sh
include/: DependencyManager.h  Log.h  Renderer.h  SystemInfo.h  WebcamFeed.h
src/: DependencyManager.cpp  Log.cpp  Renderer.cpp  SystemInfo.cpp  WebcamFeed.cpp  main.cpp
